Added 'get_topics_network' functionality back (after fixes in TopicDB).
